--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "homepage": "https://github.com/chavikothari2711/WhisperOfHeart#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1"
   },
-  "devDependencies": {},
   "keywords": [],
   "description": ""
 }
